fix: width on navigation buttons on mobile

--- a/src/summersplash2022/index.module.css
+++ b/src/summersplash2022/index.module.css
@@ -973,6 +973,15 @@
     max-width: 100%;
   }
 
+  .navigationButton1,
+  .navigationButton2,
+  .navigationButton3,
+  .navigationButton4,
+  .navigationButton5,
+  .navigationButton6 {
+    width: auto;
+  }
+
   .h4Section1 {
     margin-top: 0px;
     font-family: 'Recoleta';
